--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <title>
         Jay Medina
     </title>
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </Head>
 <body>
-<h1>
-Jay Medina
-</h1>
-
-<h2>
-    hey dad its meeeeeee.
-</h2>
+        <div class="jumbotron">
+                <h1 class="display-4">Jay Medina</h1>
+                <p class="lead">A young professional looking to secure the bag.</p>
+                <hr class="my-4">
+                <p>Come check out my Github. I'm making moves.</p>
+                <a class="btn btn-primary btn-lg" href="https://github.com/JayMedina0/" target="_blank" role="button">GitHub</a>
+              </div>
 
 </body>
 
