--- a/index.html
+++ b/index.html
@@ -66,21 +66,18 @@
         <h1 class="mb-0">Jay
           <span class="text-primary">Medina</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">10936 Keys Gate Drive · Riverview, FL 33579 · (813) 787-1521 ·
+          <a href="mailto:name@email.com">Jay.Medina813@Gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am a full Stack developer experienced in Software engineering, Sales, and Customer Service. Also, I am fully bilingual in English and Spanish and can code in Java and JavaScript. Thanks for stopping by.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/JayMedina0"target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          <a href="https://www.facebook.com/Gil.Medina.Jr"target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -149,24 +146,24 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Appalachian State University</h3>
+            <div class="subheading mb-3">Bachelor of the Arts - In Progress</div>
+            <div>International Business</div>
+            <p>GPA: 3.14</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2011 - May 2012</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Olympic High School</h3>
+            <div class="subheading mb-3">Renaissance School of the Arts</div>
+            <p>GPA: 3.66</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2008 - May 2011</span>
           </div>
         </div>
 
@@ -190,7 +187,7 @@
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-angular"></i>
           </li>
           <li class="list-inline-item">
@@ -198,16 +195,16 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-sass"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-less"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-gulp"></i>
           </li>
@@ -242,8 +239,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a software engineer, I enjoy most of my time being outdoors. In the winter, I love riding my motorcycle and mountain biking. During the summer here in Florida, I enjoy going to the beach, playing videos games to get away from the heat, and playing basketball.</p>
+        <p class="mb-0">When forced indoors, I attend to my bonsai trees, I am an ameatur chef, and I spend a large amount of my free time on GitHub checking out cool new repositories.</p>
       </div>
     </section>
 
@@ -251,34 +248,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Awards &amp; Certifications &amp; Licenses</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Georgia Institute of Technology Full Stack Developer Certification</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Certified and Fully Bilingual In English and Spanish</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            MetLife Regional Salesman of the Year 2015-16 (Life Insurance)</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <!-- 1<sup>st</sup> -->
+            Licensed Insurance Agent In Over 20 States</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            
+            
         </ul>
       </div>
     </section>
