--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">10936 Keys Gate Drive · Riverview, FL 33579 · (813) 787-1521 ·
           <a href="mailto:name@email.com">Jay.Medina813@Gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a full Stack developer experienced in Software engineering, Sales, and Customer Service. Also, I am fully bilingual in English and Spanish and can code in Java and JavaScript. Thanks for stopping by.</p>
+        <p class="lead mb-5">Change 1 I am a full Stack developer experienced in Software engineering, Sales, and Customer Service. Also, I am fully bilingual in English and Spanish and can code in Java and JavaScript. Thanks for stopping by.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
