--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
@@ -263,7 +263,7 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             <!-- 1<sup>st</sup> -->
             Licensed Insurance Agent In Over 20 States</li>
-          <li>
+          <li> -->
             
             
         </ul>
